--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -42,8 +42,7 @@ h1, h2 {
   width: 100%;
   background-attachment: fixed;
   background-size: cover;
-  background-position: center;
-  z-index: -9999; }
+  background-position: center; }
   .background:before {
     position: absolute;
     height: 100%;
@@ -78,7 +77,7 @@ h1, h2 {
       margin: 25px; }
 
 .background__intro {
-  background-image: url("../images/background.jpg"); }
+  background-image: url("../images/background_low.jpg"); }
   .background__intro:before {
     background-color: rgba(0, 0, 0, 0.4); }
 
@@ -113,7 +112,7 @@ h1, h2 {
   color: white;
   font-family: 'Open Sans', sans-serif;
   font-weight: 100; }
-  .button:hover {
+  .button:hover, .button.is-checked {
     color: #85d62d;
     background-color: white; }
 
