--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -61,7 +61,6 @@ h1, h2{
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: center;
-	z-index: -9999;
 
 	&:before{
 		position: absolute;
@@ -109,7 +108,7 @@ h1, h2{
 }
 
 .background__intro{
-	background-image: url('../images/background.jpg');
+	background-image: url('../images/background_low.jpg');
 
 	&:before{
 		background-color: rgba(0,0,0,0.4);
