--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -66,7 +66,8 @@ h1, h2 {
     right: 0;
     margin: auto;
     width: 80vw;
-    height: 50vh; }
+    height: 50vh;
+    z-index: -5; }
     .section__intro .brand h1 {
       font-size: 10vw;
       font-weight: bold;
@@ -77,7 +78,8 @@ h1, h2 {
       margin: 25px; }
 
 .background__intro {
-  background-image: url("../images/background_low.jpg"); }
+  background-image: url("../images/background_low.jpg");
+  z-index: -5; }
   .background__intro:before {
     background-color: rgba(0, 0, 0, 0.4); }
 
@@ -117,7 +119,6 @@ h1, h2 {
     background-color: white; }
 
 .background__skills {
-  z-index: -1;
   background-image: url("../images/skills.jpg"); }
   .background__skills:before {
     background-color: #365911;
@@ -136,6 +137,7 @@ h3 {
   padding: 25px 0; }
 
 .skills__inner {
+  position: relative;
   padding: 0 25px 25px 25px; }
 
 .skills__lists {
