fixed project bug #24

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -230,3 +230,5 @@ section:last-of-type {
     color: #85d62d; }
   .project-info em {
     font-style: italic; }
+
+/*# sourceMappingURL=site.css.map */
